@@ -1,12 +1,5 @@
-This lists only the changes for the current release (v1.04) over the last
+This lists only the changes for the current release (v1.05) over the last
 version, since HISTORY is now quite big:
 
-* Split Math::Big into Math::BigInt, Math::Big and Math::String
-* Math::Big has now the following functions to calculate certain
-  trigonometric functions and usefull constants with arbitrary precision:
-  euler, bernoulli, sin, cos, tan, sinh, cosh, arctan, arcsin, arcsinh, arctanh
-* Split up Math::Big::Factors from Math::Big.pm
-* Math::BigInt::Constant:
-  + tests for bior(), band(), bxor(), bnan(), binf(), bceil() and bfloor()
-  + fixed up doc to match current version
+* fixed some nits in Math::BigInt::Constant and added tests
 
